# Genny

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Genny  Makefile  README.md  cmake_install.cmake
src/: globals.h  main.cpp
src/cuda/: cudaRO.cpp  cudaRO.h  cuda_functions.cu  cuda_functions.h
src/genetics/: genetics.cpp  genetics.cpp.bak  genetics.h
src/ufl/: ufl.cpp  ufl.h
